// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders favorited correctly 1`] = `
<TouchableHighlight
  accessibilityTraits={
    Array [
      "selected",
      "button",
    ]
  }
  onPress={[Function]}
  style={
    Object {
      "borderBottomColor": "#C7CDD1",
      "borderBottomWidth": 1,
    }
  }
  testID="edit-favorites.course-favorite.1-favorited"
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "flexDirection": "row",
        "paddingHorizontal": 16,
        "paddingVertical": 16,
      }
    }
  >
    <Image
      source={
        Object {
          "uri": "starSolid",
        }
      }
      style={
        Array [
          Object {
            "height": 20,
            "marginRight": 10,
            "width": 20,
          },
          Object {
            "tintColor": "#008EE2",
          },
        ]
      }
    />
    <Text
      style={
        Array [
          Object {
            "color": "#2D3B45",
            "fontSize": 16,
          },
          Object {
            "fontWeight": "500",
            "marginRight": 16,
          },
        ]
      }
    >
      Learn React Native
    </Text>
  </View>
</TouchableHighlight>
`;

exports[`renders unfavorited correctly 1`] = `
<TouchableHighlight
  accessibilityTraits={
    Array [
      "button",
    ]
  }
  onPress={[Function]}
  style={
    Object {
      "borderBottomColor": "#C7CDD1",
      "borderBottomWidth": 1,
    }
  }
  testID="edit-favorites.course-favorite.1-not-favorited"
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "flexDirection": "row",
        "paddingHorizontal": 16,
        "paddingVertical": 16,
      }
    }
  >
    <Image
      source={
        Object {
          "uri": "starLine",
        }
      }
      style={
        Array [
          Object {
            "height": 20,
            "marginRight": 10,
            "width": 20,
          },
          Object {
            "tintColor": "#008EE2",
          },
        ]
      }
    />
    <Text
      style={
        Array [
          Object {
            "color": "#2D3B45",
            "fontSize": 16,
          },
          Object {
            "fontWeight": "500",
            "marginRight": 16,
          },
        ]
      }
    >
      Learn React Native
    </Text>
  </View>
</TouchableHighlight>
`;
